--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3'
 services:
   api:
     image: teslagov/clarakm-projects-go:latest
+    container_name: clarakm-projects-go
     ports:
       - "8080:8080"
     environment:
