--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,26 +7,17 @@ services:
     ports:
       - "8080:8080"
     environment:
-      - MYSQL_HOST=db
-      - MYSQL_DATABASE=clarakm-projects
-      - MYSQL_USER=clara
-      - MYSQL_PASSWORD=password
+      - DB_HOST=db
+      - DB_DATABASE=clarakm-projects
+      - DB_USER=clara
+      - DB_PASSWORD=password
     depends_on:
       - db
 
   db:
     container_name: clarakm-projects-db
-    image: mysql:5.7.20
+    image: postgres:10.1-alpine
     environment:
-      - MYSQL_ROOT_PASSWORD=root
-      - MYSQL_DATABASE=clarakm-projects
-      - MYSQL_USER=clara
-      - MYSQL_PASSWORD=password
-    ports:
-      - "13306:3306"
-    volumes:
-      - projects-data-volume:/var/lib/mysql
-
-volumes:
-  projects-data-volume:
-    driver: local
+      - POSTGRES_DB=clarakm-projects
+      - POSTGRES_USER=clara
+      - POSTGRES_PASSWORD=password
